# vomix-snakemake

./: .Snakefile.swp  .config.yml.swp  .gitignore  .panoptes.db  .readthedocs.yaml  .viralcontigident.smk.swp  Dockerfile  README.md  Snakefile  assembly.smk  config.yml  jobscript.sh  nohup.out  preprocessing.smk  pyproject.toml  qsuberr  qsubout  sample_list.tsv  sample_list_deepsea.tsv  sample_list_full.tsv  sample_list_head.tsv  taxonomy.smk  test.csv  test.tsv  testout.csv  viralcontigident.smk  workflow.drawio
config/: .config.yml.swp  .prokaryote.yml.swp  .viral-contigident.yml.swp  abundance.yml  assembly.yml  checkv-pyhmmer.yml  clustering.yml  community.yml  config.schema.csv  config.schema.yml  config.yml  config_generate.py  mapping.yml  preprocessing.yml  prokaryote.yml  taxonomy.yml  viral-binning.yml  viral-contigident.yml  viral-taxonomy.yml  viralcontigident.yml
config/depracated/: config_20250801.yml
pipeline/envs/: bamm.yml  base.yml  checkv.yml  dvf.yml  fastp.yml  metaviromewrapper.yml  phabox.yml  prodigal.yml  utility.yml  virbot.yml  vs2.yml
pipeline/rules/: .viralcontigident.smk.swp  assembly.smk  pipelinesequence.list  preprocessing.smk  taxonomy.smk  viralcontigident.smk
pipeline/src/: .metaviromewrapper.swp  filtercontig_scores.py  (+1 more)
sample/: sample_list.csv  sample_list.tsv  sample_list_spades.tsv
testdir/: test.faa  test.tbl
tmp/: dereplicated_viral_contigs.fa.clstr
vomix/: env_setup.sh  module.py  modules.py  snakemake.sh  snakemakeFlags.py  vomix.py  vomix_actions.py
workflow/: .Snakefile.swp  Snakefile  sample_list.tsv
(+187 files in other folders)
