[project]
name = "vomix"
version = "0.1.0"
description = "A Python wrapper for vomix"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools]
packages = ["vomix"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
vomix = "vomix.vomix:cli"